<resources>
    <string name="app_name">PSM</string>
    <string name="select_character_title">宠物学校管理演示</string>
    <string name="owner_login_title">宠物主人登录注册</string>
    <string name="title_owner_pet">宠物</string>
    <string name="title_owner_school">学校</string>
    <string name="title_school_name">四川家宝宠物服务学校</string>
    <string name="title_course_list">课程信息</string>
    <string name="title_trainer_list">训练师信息</string>
    <string name="school_name">四川家宝宠物服务有限公司</string>
    <string name="title_info">个人</string>
    <string name="select_owner_button">宠物主人</string>
    <string name="select_trainer_button">训练师</string>
    <string name="select_admin_button">管理员</string>
    <string name="select_activity_text">请选择一个身份</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_trainer_login">训练师登录</string>
    <string name="title_activity_admin_login">管理员登录</string>
    <string name="title_activity_owner_main">宠物主人管理主页</string>
    <string name="title_pet">宠物</string>
    <string name="title_school">学校</string>
    <string name="title_information">更多</string>
    <string name="title_activity_trainer_main">TrainerMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notification">通知</string>
    <string name="prompt_username">用户名</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="menu_add">添加</string>
    <string name="menu_refresh">刷新</string>
    <string name="item_pet_lable_age">年龄：</string>
    <string name="item_pet_lable_sex">性别：</string>
    <string name="item_pet_lable_species">种类：</string>
    <string name="lable_pet_detail_name">名字</string>
    <string name="lable_pet_detail_age">年龄</string>
    <string name="lable_pet_detail_sex">性别</string>
    <string name="lable_pet_detail_species">种类</string>
    <string name="lable_pet_detail_start">入学时间</string>
    <string name="lable_pet_detail_end">毕业时间</string>
    <string name="lable_pet_detail_course">课程</string>
    <string name="lable_course_detail_inst">训练说明</string>
    <string name="lable_course_detail_condition">入学条件</string>
    <string name="lable_course_detail_duration">训练周期</string>
    <string name="lable_course_detail_content">课程内容</string>
    <string name="lable_course_detail_prise">费用</string>
    <string name="lable_course_detail_note">备注</string>
    <string name="lable_school_contact">联系人</string>
    <string name="lable_school_phone">电话</string>
    <string name="lable_school_address">地址</string>
    <string name="lable_trainer_detail_name">姓名</string>
    <string name="lable_trainer_detail_age">年龄</string>
    <string name="lable_trainer_detail_sex">性别</string>
    <string name="lable_trainer_detail_email">邮箱</string>
    <string name="lable_trainer_detail_position">职位</string>
    <string name="lable_trainer_detail_maxim">格言</string>
    <string name="lable_trainer_detail_intro">介绍</string>
    <string name="value_school_contact">范小姐</string>
    <string name="value_school_phone">18224449240</string>
    <string name="value_school_address">成都市双流县彭镇福田村3组28号</string>
    <string name="lable_pet_hr">健康状况</string>
    <string name="card_title_school">学校简介</string>
    <string name="card_title_school_calendar">校历</string>
    <string name="card_title_school_detail">校园风采</string>
    <string name="school_detail_subtitle_1">学校简介</string>
    <string name="school_detail_subtitle_2">联系方式</string>
    <string name="card_title_course">训练课程</string>
    <string name="card_title_pet">宠物信息</string>
    <string name="card_title_trainer">训练师信息</string>
    <string name="pet_hr_modify">健康状况信息修改</string>
    <string name="pet_hr_modify_title_confirm">确定修改</string>
    <string name="info_char_default">用户名</string>
    <string name="info_char_owner">宠物主人</string>
    <string name="info_char_trainer">训练师</string>
    <string name="info_char_admin">管理员</string>
    <string name="info_owner_feedback">反馈</string>
    <string name="info_refresh">更新信息</string>
    <string name="info_exit">退出</string>
    <string name="info_attendance">考勤信息</string>
    <string name="course_item_name_lable">课程名称</string>
    <string name="course_item_duration_lable">训练周期：</string>
    <string name="notifi_item_lable_date">日期：</string>
    <string name="notifi_item_lable_admin">管理员：</string>
    <string name="item_trainer_lable_position">职位：</string>
    <string name="item_trainer_lable_age">性别：</string>
    <string name="title_activity_pet_owner">PetOwnerActivity</string>
    <string name="value_trainer_default_name">训犬师1</string>
    <string name="value_trainer_default_age">20</string>
    <string name="value_trainer_default_sex">男</string>
    <string name="value_trainer_default_email">1234567890@example.com</string>
    <string name="value_trainer_default_position">训犬师</string>
    <string name="value_trainer_default_maxim">格言</string>
    <string name="value_trainer_default_intro">自我介绍</string>
    <string name="value_course_inst">"Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"</string>
    <string name="value_course_condition">"Surfaces and edges of the material provide visual cues that are grounded in reality. The "</string>
    <string name="value_course_duration">启蒙教育</string>
    <string name="value_course_content">2017-1-1</string>
    <string name="value_course_prise">2017-2-1</string>
    <string name="value_course_note">"world, without breaking the rules of physics.\n"</string>
</resources>