<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_activity_text"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000000"
        android:layout_above="@+id/select_owner_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp" />
    <Button
        android:id="@+id/select_owner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_owner_button"
        android:textSize="@dimen/select_button_size"
        android:layout_gravity="center"
        android:layout_marginBottom="56dp"
        android:layout_above="@+id/select_trainer_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/select_trainer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_trainer_button"
        android:textSize="@dimen/select_button_size"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/select_admin_button" />
    <Button
        android:id="@+id/select_admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_admin_button"
        android:textSize="@dimen/select_button_size"
        android:layout_gravity="center"
        android:layout_below="@+id/select_trainer_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />


</RelativeLayout>
