<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uestc.naldo.psm.activity.ItemActivity.TrainerActivity"
    tools:showIn="@layout/activity_trainer">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_detail_content_marginTop"
            android:showDividers="middle"
            android:divider="@drawable/dividerline"
            android:dividerPadding="@dimen/divider_detail_content_item_padding">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_name"/>
                <TextView
                    android:id="@+id/text_trainer_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|right"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_name"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_age"/>
                <TextView
                    android:id="@+id/text_trainer_age"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|right"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_age"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_sex"/>
                <TextView
                    android:id="@+id/text_trainer_sex"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|right"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_sex"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_email"/>
                <TextView
                    android:id="@+id/text_trainer_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|right"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_email"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_detail_content_marginTop"
            android:showDividers="middle"
            android:divider="@drawable/dividerline"
            android:dividerPadding="@dimen/divider_detail_content_item_padding">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_position"/>
                <TextView
                    android:id="@+id/text_trainer_position"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|right"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_position"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_maxim"/>
                <TextView
                    android:id="@+id/text_trainer_maxim"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_maxim"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_trainer_detail_intro"/>
                <TextView
                    android:id="@+id/text_trainer_intro"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/trainer_detail_value_size"
                    android:text="@string/value_trainer_default_intro"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
