<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uestc.naldo.psm.activity.ItemActivity.CourseActivity"
    tools:showIn="@layout/activity_course">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_detail_content_marginTop"
            android:showDividers="middle"
            android:divider="@drawable/dividerline"
            android:dividerPadding="@dimen/divider_detail_content_item_padding">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/course_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_course_detail_inst"/>
                <TextView
                    android:id="@+id/text_course_inst"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/pet_detail_value_size"
                    android:text="@string/value_course_inst"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/course_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_course_detail_condition"/>
                <TextView
                    android:id="@+id/text_course_condition"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/pet_detail_value_size"
                    android:text="@string/value_course_condition"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/course_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_course_detail_duration"/>
                <TextView
                    android:id="@+id/text_course_duration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/pet_detail_value_size"
                    android:text="@string/value_course_duration"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_detail_content_marginTop"
            android:showDividers="middle"
            android:divider="@drawable/dividerline"
            android:dividerPadding="@dimen/divider_detail_content_item_padding">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/course_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_course_detail_content"/>
                <TextView
                    android:id="@+id/text_course_content"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/pet_detail_value_size"
                    android:text="@string/value_course_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/course_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_course_detail_prise"/>
                <TextView
                    android:id="@+id/text_course_prise"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/pet_detail_value_size"
                    android:text="@string/value_course_prise"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/divider_detail_content_item_padding"
                android:background="@color/colorWhite">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center|left"
                    android:textSize="@dimen/course_detail_lable_size"
                    android:textColor="@color/colorText"
                    android:text="@string/lable_course_detail_note"/>
                <TextView
                    android:id="@+id/text_course_note"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:gravity="center|left"
                    android:textSize="@dimen/pet_detail_value_size"
                    android:text="@string/value_course_note"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
